--- a/html-basic/element.html
+++ b/html-basic/element.html
@@ -23,8 +23,72 @@
   <h5>h5으로 작성한 요소입니다.</h5>
   <h6>h6으로 작성한 요소입니다.</h6>
 
-  <!-- strog, em 요소 : stron - 트정 내용ㅇㄹ 굵게 표시할 때 사용 / em - 특정 내용을 이텔릭체로 표시할 때 사용 -->
-  <p><strong>Lorem</strong> ipsum dolor sit amet, <em>consectetur</em> adipiscing elit. Pellentesque condimentum erat at dignissim tempor. Cras dolor purus, imperdiet non tempor in, consequat laoreet nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat lacus id condimentum tempus. Suspendisse nisi dolor, molestie in metus at, vestibulum feugiat neque. Curabitur viverra cursus orci laoreet facilisis. Nam id urna ligula. Maecenas urna urna, tristique et tempor at, accumsan in nibh. Nullam et massa gravida, molestie eros nec, fermentum urna. Donec nisl urna, luctus quis urna vitae, fermentum rhoncus elit.</p>
+  <!-- strog, em 요소 : stron - 특정 내용을 굵게 표시할 때 사용 / em - 특정 내용을 이텔릭체로 표시할 때 사용 -->
+  <p>
+    <strong>Lorem</strong> ipsum dolor sit amet, 
+    <em>consectetur</em> adipiscing elit. Pellentesque condimentum erat at dignissim tempor. Cras dolor purus, imperdiet non tempor in, consequat laoreet nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat lacus id condimentum tempus. Suspendisse nisi dolor, molestie in metus at, vestibulum feugiat neque. Curabitur viverra cursus orci laoreet facilisis. Nam id urna ligula. Maecenas urna urna, tristique et tempor at, accumsan in nibh. Nullam et massa gravida, molestie eros nec, fermentum urna. Donec nisl urna, luctus quis urna vitae, fermentum rhoncus elit.</p>
+
+    <br /><br />
+    <hr />
+    <br /><br />
+
+    <!-- 리스트 요소 -->
+    <!-- li 요소 : 리스트의 한 항목을 나타낼 때 사용되는 요소 -->
+    <!-- ol 요소 : 순서가 있는 리스트를 표현할 때 사용되는 요소 -->
+    <ol>
+      <li>첫번째 항목</li>
+      <li>두번째 항목</li>
+      <li>세번째 항목</li>
+    </ol>
+    <!-- ul 요소 : 순서가 없는 리스트를 표현할 때 사용되는 요소 -->
+    <ul>
+      <li>첫번째 항목</li>
+      <li>두번째 항목</li>
+      <li>세번째 항목</li>
+    </ul>
+
+    <br /><br />
+    <hr />
+    <br /><br />
+
+    <!-- 링크와 이미지 요소 -->
+
+    <!-- a 요소 : 하이퍼링크를 적용하고자할 때 사용되는 요소 -->
+    <a href="https://naver.com">Naver</a>
+
+    <!-- img 요소 : 브라우저 페이지에 이미지를 적용하고자할 때 사용되는 요소 -->
+    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEyMjdfMTA1%2FMDAxNzAzNjYyMjg4MDQz.sJvE_4lC7aSvn2qNjDFqck8-QvTYqEjjFQ4Wy-idGNQg.51a80329ezIx2HeuIMF2C44V5mkqzWj_vfntWtvzELcg.JPEG.animalandhuman%2FGettyImages-491143647.jpg&type=sc960_832" alt="고양이 사진">
+  
+    <br /><br />
+    <hr />
+    <br /><br />
+
+    <!-- 테이블 요소 -->>
+    <!-- table 요소 : 표를 표현할 때 사용되는 요소 -->
+    <!-- th 요소 : 표의 제목 행을 표현할 때 사용되는 요소 -->
+    <!-- tr 요소 : 표의 레코드(로우)를 표현할 때 사용되는 요소 -->
+    <!-- td 요소 : 표의 하나의 필드를 표현할 때 사용되는 요소 -->
+    <table>
+      <tr>
+        <th>순번</td>
+        <th>제목</td>
+        <th>작성자</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>안녕하세요</td>
+        <td>홍길동</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>안녕히가세요</td>
+        <td>김철수</td>
+      </tr>
+    </table>
+
+    <br /><br />
+    <br /><br />
+    <br /><br />
 
 </body>
 </html>
