--- a/html-basic/area.html
+++ b/html-basic/area.html
@@ -6,10 +6,12 @@
  <title>HTML 그룹 요소</title>
 </head>
 <body>
+  <a href="#header">header로~~</a>
+  <a href="#button">button으로~~</a>
   <!-- div 요소 : 웹 페이지의 영역을 구분할 때 사용되는 요소 -->
   <!-- 기본 값으로 block (한줄 전체 차지)요소 -->
-  <div>div 요소입니다</div>
-  <div>div 요소입니다</div>
+  <div style="height:70vh;">div 요소입니다</div>
+  <div style="height:70vh;">div 요소입니다</div>
   
   <!-- span 요소 : 내용의 일부를 선택할 때 사용되는 요소 -->
   <!-- 기본 값으로 inline(내용만큼 차지)요소 -->
@@ -18,8 +20,8 @@
 
   <!-- 그룹 속성 -->
   <!-- id 속성 : 페이지내에서 특정 하나의 요소를 선택할 때 사용하는 선택자 -->
-  <div id="header"></div>
+  <div style="height:70vh;" id="header">header</div>
   <!-- class 속성 : 페이지 내에서 특정 요소의 그룹을 선택할 때 사용하는 선택자 -->
-  <div clas="button"></div>
+  <div style="height:70vh;" id="button" class="button">button</div>
 </body>
 </html>
